fix margin on mobile

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -65,3 +65,8 @@ aside.quote {
   height: 5em;
   max-height: 5em;
 }
+
+
+#main-outlet {
+  margin-top: 40px;
+}
